--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@
 .DS_Store
 /build
 /captures
+libs/
+src/main/java/com/alexliu/
+src/main/res/drawable/
+src/main/res/layout/activity_main2.xml
+src/main/res/layout/fragment_ip.xml
+src/main/res/layout/fragment_music.xml
+src/main/res/layout/headerlayout.xml
+src/main/res/menu/
+src/main/res/mipmap-xxhdpi/ceshi.jpg
+src/main/res/values-v21/
